# vita

./: .gitignore  Dockerfile  README.md  db.sqlite3  fly.toml  main.py  manage.py  pyproject.toml
core/: middleware.py  models.py  services.py
journal/: models.py
journal/migrations/: 0001_initial.py
social/: admin.py  forms.py  models.py  urls.py  views.py
social/migrations/: 0001_initial.py  0002_contact_priority.py  0003_contact_check_in_frequency_days_and_more.py  0004_contacttouchpoint_sentiment.py
social/templates/social/: contacts_dashboard.html
social/templates/social/partials/: contact_detail.html  contact_list.html  contact_row.html
tasks/: admin.py  models.py  urls.py  views.py
tasks/fixtures/: dev_tasks.json
tasks/migrations/: 0001_initial.py  0002_routine_routinestep.py  0003_alter_routine_days_of_week.py  0004_routine_tags_routinestep_default_energy_and_more.py  0005_task_promoted_from_routine_task_routine_and_more.py  0006_remove_task_ends_at_remove_task_starts_at.py  0007_task_project.py  0008_alter_tag_color.py
tasks/templates/tasks/: board.html  inbox.html  task_edit.html  task_list.html
tasks/templates/tasks/partials/: add_task_form.html  board.html  project_offcanvas_create.html  project_offcanvas_detail.html  project_offcanvas_list.html  tag_offcanvas_create.html  tag_offcanvas_detail.html  tag_offcanvas_list.html  task_comments.html  task_form_card.html
templates/: base.html
templates/registration/: login.html
vita/: asgi.py  settings.py  urls.py  wsgi.py
