[project]
name = "vita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "django-htmx>=1.27.0",
    "djlint>=1.36.4",
    "python-dotenv>=1.2.1",
]

[tool.djlint]
profile="django"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
